Fix spacing for standalone h2 headers like 'Main Apps' on homepage

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -137,6 +137,21 @@ h2 {
 	margin-top: 1.5em;
 }
 
+/* Add more spacing for standalone h2 headers in main content (like 'Main Apps') */
+.home #wrapper > h2, .home #wrapper > .h-feed > h2, .home #wrapper > .content > h2 {
+	margin-top: 2.5em;
+}
+
+/* Make sure the first main content h2 has appropriate spacing */
+.home #wrapper > h2:first-of-type, .home #wrapper > .content > h2:first-of-type {
+	margin-top: 1.5em;
+}
+
+/* More general rule for h2 headers in homepage content */
+.home #wrapper h2:not(article h2) {
+	margin-top: 2.5em;
+}
+
 h3 {
 	font-size: 20px;
 	font-weight: 500;
